# flare-im-core

./: .gitignore  ARCHITECTURE_GATEWAY.md  CONTEXT_INTEGRATION.md  Cargo.toml  Makefile  README.md  chat_test_plan.md  test_fix.rs  test_messaging.sh  test_minio.rs  test_p2p_chat.sh  test_session_id.rs
flare-access-gateway/: Cargo.toml
flare-access-gateway/cmd/: main.rs
flare-access-gateway/src/: config.rs  main.rs
flare-access-gateway/src/application/: commands.rs  mod.rs  queries.rs  service.rs
flare-access-gateway/src/application/commands/: mod.rs  session_commands.rs
flare-access-gateway/src/application/queries/: mod.rs  session_queries.rs
flare-access-gateway/src/domain/: mod.rs  models.rs  repositories.rs  service.rs  session.rs
flare-access-gateway/src/infrastructure/: connection_query.rs  mod.rs
flare-access-gateway/src/infrastructure/auth/: mod.rs
flare-access-gateway/src/infrastructure/messaging/: ack_publisher.rs  message_router.rs
flare-access-gateway/src/infrastructure/session_store/: in_memory.rs  redis.rs
flare-access-gateway/src/infrastructure/signaling/: grpc.rs
flare-access-gateway/src/interface/: connection.rs  events.rs  gateway.rs
flare-access-gateway/src/interface/grpc/: access_gateway_server.rs  mod.rs  server.rs
flare-access-gateway/src/service/: bootstrap.rs
flare-conversation/: Cargo.toml  run_tests.sh
flare-conversation/cmd/: main.rs
flare-conversation/src/: config.rs
flare-conversation/src/application/: commands.rs  handlers.rs  mod.rs  queries.rs
flare-conversation/src/domain/: mod.rs
flare-conversation/src/domain/model/: mod.rs
flare-conversation/src/domain/repository/: mod.rs
flare-conversation/src/domain/service/: conversation_domain_service.rs  mod.rs  thread_domain_service.rs
flare-conversation/src/infrastructure/persistence/: mod.rs  postgres_repository.rs  redis_presence.rs  redis_repository.rs  thread_repository.rs
flare-conversation/src/infrastructure/transport/: storage_reader.rs
flare-conversation/src/interface/grpc/: handler.rs
flare-conversation/src/service/: mod.rs  wire.rs
flare-core-gateway/: Cargo.toml  test_streaming.rs
flare-core-gateway/cmd/: main.rs
flare-core-gateway/src/: config.rs  error.rs  handler.rs  lib.rs  main.rs  server.rs  transform.rs
flare-core-gateway/src/application/: mod.rs
flare-core-gateway/src/config/: mod.rs  settings.rs
flare-core-gateway/src/domain/: mod.rs
flare-core-gateway/src/handler/: access_gateway.rs  gateway.rs  push.rs
flare-core-gateway/src/infrastructure/: database.rs  gateway_router.rs  hook.rs  hook_engine.rs  media.rs  message.rs  mod.rs  online.rs  push.rs  route.rs  session.rs  signaling.rs  storage.rs
flare-core-gateway/src/interceptor/: auth_interceptor.rs  mod.rs
flare-core-gateway/src/interface/: mod.rs
flare-core-gateway/src/middleware/: auth.rs  mod.rs  rate_limit.rs  rbac.rs  tenant.rs
flare-core-gateway/src/repository/: hook.rs  tenant.rs
flare-core-gateway/src/router/: mod.rs
flare-core-gateway/src/service/: bootstrap.rs  mod.rs  wire.rs
flare-hook-engine/: Cargo.toml  Makefile  README.md
flare-hook-engine/cmd/: main.rs
flare-hook-engine/src/: lib.rs
flare-hook-engine/src/application/: commands.rs  mod.rs  queries.rs  service.rs
flare-hook-engine/src/config/: mod.rs
flare-hook-engine/src/domain/: mod.rs  repositories.rs  service.rs
flare-hook-engine/src/infrastructure/: mod.rs  monitoring.rs
flare-hook-engine/src/interface/: mod.rs
flare-hook-engine/src/service/: bootstrap.rs  mod.rs  registry.rs  wire.rs
flare-media/: Cargo.toml  README.md
flare-media/cmd/: main.rs
flare-media/src/: config.rs  lib.rs
flare-media/src/application/: commands.rs  mod.rs  queries.rs  service.rs  utils.rs
flare-media/src/config/: mod.rs  settings.rs
flare-media/src/domain/: mod.rs  models.rs  repositories.rs  service.rs
flare-media/src/infrastructure/: media_processor.rs  mod.rs
flare-media/src/service/: bootstrap.rs  mod.rs  registry.rs  wire.rs
flare-media/tests/: README.md  full_integration_test.md  integration_test.rs  integration_test_summary.md  single_multipart_upload_test.md
flare-message-orchestrator/: Cargo.toml  DESIGN_OPERATION_MESSAGE_UNIFIED.md
flare-message-orchestrator/cmd/: main.rs
flare-message-orchestrator/src/: config.rs  handler.rs  lib.rs  main.rs  server.rs
flare-message-orchestrator/src/application/: commands.rs  hooks.rs  mod.rs
flare-message-orchestrator/src/config/: mod.rs  settings.rs
flare-message-orchestrator/src/domain/: message_kind.rs  message_submission.rs  mod.rs  repositories.rs
flare-message-orchestrator/src/infrastructure/: config.rs  mod.rs
flare-message-orchestrator/src/service/: bootstrap.rs  mod.rs  wire.rs
flare-push/proxy/: Cargo.toml
flare-push/proxy/cmd/: main.rs
flare-push/proxy/src/: lib.rs  main.rs  server.rs
flare-push/server/: Cargo.toml
flare-push/server/cmd/: main.rs
flare-push/server/src/: config.rs  error.rs  hooks.rs  lib.rs  main.rs  server.rs
flare-push/worker/: Cargo.toml
flare-push/worker/cmd/: main.rs
flare-push/worker/src/: config.rs  hooks.rs  lib.rs  main.rs  server.rs
flare-signaling/common/: Cargo.toml
flare-signaling/common/src/: error.rs  lib.rs  models.rs  utils.rs
flare-signaling/gateway/: Cargo.toml
flare-signaling/gateway/certs/: server.crt  server.key
flare-signaling/gateway/cmd/: main.rs
flare-signaling/gateway/src/: lib.rs
flare-signaling/online/: Cargo.toml  TEST_SUMMARY.md
flare-signaling/online/cmd/: main.rs
flare-signaling/online/src/: config.rs  lib.rs  main.rs  util.rs
flare-signaling/route/: Cargo.toml
flare-signaling/route/cmd/: main.rs
flare-signaling/route/src/: config.rs  lib.rs  main.rs
flare-storage/model/: Cargo.toml
flare-storage/model/src/: lib.rs
flare-storage/reader/: Cargo.toml
flare-storage/reader/cmd/: main.rs
flare-storage/reader/src/: config.rs  handler.rs  lib.rs  main.rs  server.rs
flare-storage/writer/: Cargo.toml
flare-storage/writer/cmd/: main.rs
flare-storage/writer/src/: config.rs  handler.rs  main.rs  server.rs
(+606 files in other folders)
