[workspace]
members = [
    
    # 通信核心层 - 统一网关
    "flare-core-gateway",
    
    # 通信核心层 - 信令系统
    "flare-signaling/common",
    "flare-signaling/gateway",
    "flare-signaling/online",
    "flare-signaling/route",
    
    # 通信核心层 - 推送系统
    "flare-push/proxy",
    "flare-push/server",
    "flare-push/worker",
    
    # 通信核心层 - 存储系统
    "flare-storage/writer",
    "flare-storage/reader",
    "flare-conversation",

    # 消息编排服务
    "flare-message-orchestrator",
    
    # Hook引擎
    "flare-hook-engine",
    
    # 媒体服务
    "flare-media",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Flare Team"]
license = "MIT"

[workspace.dependencies]
# 错误处理
anyhow = "1.0"

# Base64 & BSON/Mongo 支持
base64 = "0.22"
bson = { version = "3.0", features = ["chrono-0_4"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"

# gRPC
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"

# 消息队列
rdkafka = "0.38"

# 认证
jsonwebtoken = { version = "10.2", default-features = false, features = ["rust_crypto"] }

# 工具
bytes = "1"
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
# 加密和哈希
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
hmac = "0.12"
md5 = "0.7"
# ULID 生成
ulid = "1.1"

# Service Mesh 和中间件
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# etcd 客户端
etcd-client = "0.17"

# Flare Core
flare-core = { path = "../flare-core" }

# Flare Server Core (启用 proto feature 以使用错误转换函数)
flare-server-core = { path = "../flare-server-core", features = ["proto"] }

# Flare Proto
flare-proto = { path = "../flare-proto" }

# Prometheus 指标收集
prometheus = "0.14"

# Big integers (for crypto / math utilities)
num-bigint-dig = { version = "0.8.5", default-features = false, features = ["std", "u64_digit", "prime", "rand", "zeroize"] }

# 时间和时区
chrono-tz = "0.9"

# URL 处理
url = "2.5"

# AWS SDK (用于对象存储)
aws-sdk-s3 = "1"
aws-config = "1"

# 测试工具
tokio-test = "0.4"

# 新增的依赖，用于统一管理
parking_lot = "0.12"
image = "0.24"

[package]
name = "flare-im-core"
version.workspace = true
edition.workspace = true

[lib]
name = "flare_im_core"
path = "src/lib.rs"

[dependencies]
flare-server-core = { workspace = true, features = ["proto"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
flare-proto = { workspace = true }
tonic = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
etcd-client = { workspace = true }
prost-types = { workspace = true }
chrono = { workspace = true }
flare-core = { workspace = true }
prometheus = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ulid = { workspace = true }

# ACK模块依赖
dashmap = "6.0"
redis = { workspace = true }
sqlx = { workspace = true }
zstd = "0.13"

# OpenTelemetry 分布式追踪（可选功能）
opentelemetry = { version = "0.28", optional = true }
opentelemetry-otlp = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"], optional = true }
opentelemetry-semantic-conventions = { version = "0.28", optional = true }
tracing-opentelemetry = { version = "0.29", optional = true }
[features]
default = []
tracing = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk", "tracing-opentelemetry"]
discovery = []  # 服务发现功能（默认启用，但可以通过 feature 控制）

[lints.rust]
# 允许 tracing feature（用于条件编译）
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("tracing"))'] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
prost = "0.14"
redis = { workspace = true }
sqlx = { workspace = true }
