[package]
name = "flare-access-gateway"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "flare-access-gateway"
path = "cmd/main.rs"

[dependencies]
flare-core = { workspace = true }
flare-server-core = { workspace = true }
flare-proto = { workspace = true }
flare-im-core = { path = "..", features = ["tracing"] }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
prost = { workspace = true }
prost-types = { workspace = true }
rdkafka = { workspace = true }
tokio-stream = "0.1"

