[package]
name = "flare-conversation"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flare-conversation"
path = "cmd/main.rs"

[lib]
name = "flare_conversation"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
flare-proto = { workspace = true }
flare-server-core = { workspace = true }
flare-im-core = { path = ".." }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
once_cell = { workspace = true }
prost-types = { workspace = true }
flare-core = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }
chrono = { workspace = true }

