[package]
name = "flare-core-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flare-core-gateway"
path = "cmd/main.rs"

[lib]
name = "flare_core_gateway"
path = "src/lib.rs"

[dependencies]
flare-server-core = { workspace = true }
flare-proto = { workspace = true }
flare-im-core = { path = ".." }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
flare-core = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
futures = { workspace = true }
tokio-stream = { version = "0.1" }

