[package]
name = "flare-hook-engine"
version.workspace = true
edition.workspace = true
description = "Flare IM Hook Engine - 统一的Hook配置管理和执行调度引擎"

[lib]
name = "flare_hook_engine"
path = "src/lib.rs"

[[bin]]
name = "flare-hook-engine"
path = "cmd/main.rs"

[dependencies]
# 核心依赖
flare-im-core = { path = ".." }
flare-proto = { workspace = true }
flare-server-core = { workspace = true }

# 异步运行时
tokio = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 日志和追踪
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP客户端（WebHook）
reqwest = { workspace = true }

# WebHook 签名（HMAC-SHA256）
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# 数据库
sqlx = { workspace = true }

# 工具
async-trait = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

# etcd客户端（配置中心）
etcd-client = { workspace = true }

# Consul客户端（配置中心）
# 使用 flare-server-core 的服务发现模块

# 监控指标（可选）
# prometheus = "0.13"

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
prost-types = { workspace = true }

