[package]
name = "flare-media"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "flare-media"
path = "cmd/main.rs"

[dependencies]
flare-server-core = { workspace = true }
flare-proto = { workspace = true }
flare-im-core = { path = ".." }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
prost-types = { workspace = true }
aws-sdk-s3 = "1"
aws-config = "1"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
md5 = "0.7"
hex = "0.4"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
chrono-tz = "0.9"
base64 = "0.22"
anyhow = { workspace = true }
tokio-stream = "0.1"
futures-util = "0.3"