[package]
name = "flare-media"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "flare-media"
path = "cmd/main.rs"

[dependencies]
flare-server-core = { workspace = true }
flare-proto = { workspace = true }
flare-im-core = { path = ".." }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
prost-types = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
md5 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
chrono-tz = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }

# Media processing dependencies
image = "0.24"