[package]
name = "flare-message-orchestrator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flare-message-orchestrator"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
flare-server-core = { path = "../../flare-server-core" }
flare-proto = { path = "../../flare-proto" }
flare-storage-model = { path = "../flare-storage/model" }
redis = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
rdkafka = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }
flare-im-core = { path = ".." }

