[package]
name = "flare-message-orchestrator"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "flare-message-orchestrator"
path = "cmd/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
flare-server-core = { workspace = true, features = ["kafka"] }
flare-proto = { workspace = true }
futures = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
rdkafka = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
flare-im-core = { path = "..", features = ["tracing"] }
flare-hook-engine = { path = "../flare-hook-engine" }

