[package]
name = "flare-push-server"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "flare-push-server"
path = "cmd/main.rs"

[dependencies]
flare-server-core = { workspace = true, features = ["kafka"] }
flare-proto = { workspace = true }
flare-im-core = { path = "../..", features = ["tracing"] }
flare-hook-engine = { path = "../../flare-hook-engine" }
flare-core = { path = "../../../flare-core" }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
rdkafka = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
ulid = { workspace = true }  # 添加ulid依赖