[package]
name = "flare-push-worker"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "flare-push-worker"
path = "src/main.rs"

[dependencies]
flare-server-core = { workspace = true }
flare-proto = { workspace = true }
flare-im-core = { path = "../.." }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
rdkafka = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

