[package]
name = "flare-signaling-common"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
flare-server-core = { workspace = true }
flare-proto = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
