[package]
name = "flare-signaling-gateway"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "flare-signaling-gateway"
path = "cmd/main.rs"

[dependencies]
flare-core = { workspace = true }
flare-server-core = { workspace = true, features = ["kafka", "discovery"] }
flare-proto = { workspace = true }
flare-im-core = { path = "../..", features = ["tracing", "discovery"] }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rdkafka = { workspace = true }
tokio-stream = { workspace = true }

[lints.rust]
# 允许 tracing feature（用于条件编译）
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("tracing"))'] }

