[package]
name = "flare-signaling-online"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "flare-signaling-online"
path = "cmd/main.rs"

[dependencies]
flare-server-core = { workspace = true }
flare-proto = { workspace = true }
flare-im-core = { path = "../.." }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
redis = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
prost-types = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { workspace = true }

