[package]
name = "flare-signaling-route"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flare-signaling-route"
path = "src/main.rs"

[dependencies]
flare-server-core = { workspace = true }
flare-proto = { workspace = true }
flare-im-core = { path = "../.." }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

