[package]
name = "flare-signaling-route"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "flare-signaling-route"
path = "cmd/main.rs"

[dependencies]
flare-server-core = { workspace = true }
flare-proto = { workspace = true }
flare-im-core = { path = "../.." }
flare-signaling-common = { path = "../common" }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
chrono = { workspace = true }
prometheus = { workspace = true }
redis = { workspace = true }
parking_lot = "0.12"
