[package]
name = "flare-storage-model"
version.workspace = true
edition.workspace = true

[lib]
name = "flare_storage_model"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bson = { workspace = true }
chrono = { workspace = true }
flare-proto = { path = "../../../flare-proto" }
prost-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
