[package]
name = "flare-storage-reader"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flare-storage-reader"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
flare-server-core = { path = "../../../flare-server-core" }
flare-proto = { path = "../../../flare-proto" }
flare-storage-model = { path = "../model" }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
prost-types = { workspace = true }
chrono = { workspace = true }

