[package]
name = "flare-storage-reader"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "flare-storage-reader"
path = "cmd/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
flare-server-core = { workspace = true }
flare-proto = { workspace = true }
flare-im-core = { path = "../.." }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
prost-types = { workspace = true }

[dev-dependencies]
tokio-stream = { workspace = true }
