[package]
name = "flare-storage-writer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flare-storage-writer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
flare-server-core = { path = "../../../flare-server-core" }
flare-proto = { path = "../../../flare-proto" }
flare-storage-model = { path = "../model" }
mongodb = { workspace = true }
bson = { workspace = true }
rdkafka = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
uuid = { workspace = true }

